# Dutchie

./: .env.example  .gitignore  README.md  Summarise 2.0.md  USE_CASE_FORMAL.md  development.md  summarise.md
Story/: story.md
demo-prototype/: README.md  pyproject.toml
demo-prototype/app/: __init__.py  compute_engine.py  demo_data.py  graph_service.py  main.py
demo-prototype/templates/: index.html
docs/: README.md  (+1 more)
hackathon/: .gitignore  README.md  pyproject.toml
hackathon/mobile_ui/: DESIGN.md
hackathon/scripts/: assess_scenarios_llm.py  benchmark_preprocess.py
hackathon/src/: README.md
hackathon/src/billion_hackathon/: __init__.py  main.py
hackathon/src/billion_hackathon/contracts/: __init__.py  collected.py  evidence.py  graph_blueprint.py  inconsistency.py
hackathon/src/billion_hackathon/mobile_ui/: DEVELOPMENT.md
hackathon/src/billion_hackathon/mobile_ui/static/: mobile.css  mobile.js
hackathon/src/billion_hackathon/mobile_ui/template/: mobile.html
hackathon/src/billion_hackathon/mobile_ui/templates/: mobile.html
hackathon/src/billion_hackathon/mobile_ui_2/: index.html  package.json  tailwind.config.ts  vite.config.ts
hackathon/src/billion_hackathon/modules/: __init__.py
hackathon/src/billion_hackathon/modules/bunq_mock/: README.md  fixtures.py  router.py
hackathon/src/billion_hackathon/modules/computation/: README.md  __init__.py  engine.py
hackathon/src/billion_hackathon/modules/computation/examples/: README.md  artifact_graph.json  expected_compute.json
hackathon/src/billion_hackathon/modules/data_collection/: README.md  __init__.py  service.py
hackathon/src/billion_hackathon/modules/data_collection/examples/: README.md  artifact_bundle.json  story1_expected_collection.json
hackathon/src/billion_hackathon/modules/data_ingestion/: README.md  __init__.py  audio_ingestor.py  consolidate_receipt_lines.py  document_ingestor.py  gpu_runtime.py  image_ingestor.py  image_ocr.py  image_preprocess.py  image_segmentation.py  merge_orphan_payer_with_group.py  prompts.py  service.py  stub_scenario_evidence.py
hackathon/src/billion_hackathon/modules/evidence_aggregation/: README.md  __init__.py  prompts.py  service.py
hackathon/src/billion_hackathon/modules/graph_builder/: README.md  __init__.py  inconsistency.py  service.py  state.py
hackathon/src/billion_hackathon/modules/llm/: README.md  __init__.py  client.py
hackathon/src/billion_hackathon/web/static/: app.js  graph-view.js  style.css
hackathon/src/billion_hackathon/web/templates/: index.html
hackathon/tests/: test_module_examples.py
(+34 files in other folders)
