[project]
name = "billion-demo-prototype"
version = "0.1.0"
description = "Hackathon demo: evidence → graph → compute (FastAPI)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.4",
    "pydantic>=2.10.0",
]

[tool.uv]
dev-dependencies = []
