[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "billion-hackathon"
version = "0.1.0"
description = "Hackathon backend + UI — modular pipeline per docs/architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.4",
    "pydantic>=2.10.0",
    "python-multipart>=0.0.9",
    "pillow>=10.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pytesseract>=0.3.13",
    "easyocr>=1.7.2",
    "ultralytics>=8.4.41",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
